# agentic-engineering-org-lab

./: .gitignore  AGENTS.md  PYTHON_API_DESIGN.md  PYTHON_DEVELOPMENT.md  README.md  ROADMAP.md  SPEC.md
apps/web-dashboard/: .gitignore  README.md  index.html  package.json  svelte.config.js
apps/web-dashboard/src/: app.css  app.html
apps/web-dashboard/src/lib/components/: DiffViewer.svelte  Pipeline.svelte  ReviewPanel.svelte  Section.svelte  Sidebar.svelte  StatusPill.svelte  TraceTimeline.svelte  VerificationPanel.svelte  WorldModelGraph.svelte
apps/web-dashboard/src/lib/data/: mock.ts
apps/web-dashboard/src/routes/: +layout.svelte  +page.svelte
docs/architecture/: ARCHITECTURE.md
docs/design-decisions/: DECISIONS.md
docs/security/: THREAT_MODEL.md
evals/tasks/: benchmark.yaml
examples/toy-org/: CODEOWNERS
examples/toy-org/docs/: architecture.md  ownership.md
examples/toy-org/libs/validation/: AGENTS.md  pyproject.toml  service.yaml
examples/toy-org/libs/validation/src/validation/: __init__.py  email.py  strings.py
examples/toy-org/libs/validation/tests/: test_email.py  test_strings.py
examples/toy-org/services/billing-api/: AGENTS.md  pyproject.toml  service.yaml
examples/toy-org/services/billing-api/src/billing_api/: __init__.py  app.py
examples/toy-org/services/billing-api/tests/: test_billing.py
examples/toy-org/services/notification-worker/: AGENTS.md  pyproject.toml  service.yaml
examples/toy-org/services/notification-worker/src/notification_worker/: __init__.py  worker.py
examples/toy-org/services/notification-worker/tests/: test_worker.py
examples/toy-org/services/signup-api/: AGENTS.md  pyproject.toml  service.yaml
examples/toy-org/services/signup-api/src/signup_api/: __init__.py  app.py  validators.py
examples/toy-org/services/signup-api/tests/: test_api.py  test_signup.py
