[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "validation"
version = "0.1.0"
description = "Shared validation utilities for ToyOrg"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
