[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notification-worker"
version = "0.1.0"
description = "Transactional notification background worker"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
type_checker = "mypy"
python_version = "3.12"
strict = true
